--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -16,7 +16,7 @@
 }
 
 .card {
-  z-index: 1000;
+  z-index: 100;
   position: relative;
 
   background-image: radial-gradient(
@@ -72,6 +72,11 @@
   padding: 12px 17px;
   border-radius: 7px;
   font-size: 30px;
+}
+
+.buttonNo {
+  position: absolute;
+  left: 15%;
 }
 
 .winMessage {
