--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,8 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   max-width: 100vw;
+  overflow: hidden;
+  position: fixed;
 }
 
 html {
